tests/error/call_non_template.gw
#! [contains] template call of non-template function
fun void test(){}
test:[int]();
